packages/swift/Sources/InkvecFFI/inkvec.h

/*
 * inkvec.h -- the C API of Inkvec, raster logos, icons and illustrations to SVG.
 * https://github.com/logolabs/inkvec  SPDX-License-Identifier: Apache-2.0
 *
 * GENERATED by cbindgen from crates/inkvec-ffi/src/lib.rs. Do not edit by hand.
 *
 * Usage:
 *
 *   InkvecResult r = INKVEC_RESULT_INIT;
 *   int status = inkvec_trace(png_bytes, png_len, "{\"colors\": 16}", &r);
 *   if (status == INKVEC_OK) fwrite(r.svg, 1, r.svg_len, out);
 *   else fprintf(stderr, "%s\n", r.error);
 *   inkvec_result_free(&r);
 *
 * Options are one JSON object (NULL or "" for the defaults). Their names, types, defaults,
 * descriptions and ranges are the JSON Schema returned by inkvec_options_schema(); adding an
 * option to Inkvec never changes this header.
 *
 * Strings in an InkvecResult belong to the library: release them with inkvec_result_free().
 * Strings returned by inkvec_version(), inkvec_build_target(), inkvec_options_schema() and
 * inkvec_default_options() are static and must not be freed. Every function is thread-safe.
 */

#ifndef INKVEC_H
#define INKVEC_H

#include <stddef.h>
#include <stdint.h>
#include <string.h>

/*
 Success.
 */
#define INKVEC_OK 0

/*
 A required pointer was NULL, or `out->struct_size` is smaller than this library's
 `InkvecResult`. Nothing is written to `out` in the second case.
 */
#define INKVEC_ERR_INVALID_ARGUMENT 1

/*
 The bytes are not an image Inkvec can decode, or the RGBA buffer does not match the
 dimensions given.
 */
#define INKVEC_ERR_INVALID_IMAGE 2

/*
 The options JSON is malformed, names an unknown option, or holds a value of the wrong
 type or out of range.
 */
#define INKVEC_ERR_INVALID_OPTIONS 3

/*
 The tracer failed or panicked. Not the caller's fault.
 */
#define INKVEC_ERR_INTERNAL 4

/*
 Version of this C ABI: incremented only by a change that breaks existing callers.
 Appending a field to `InkvecResult` or adding a function does not change it.
 */
#define INKVEC_ABI_VERSION 1

/*
 The outcome of one trace.

 Before each call, zero-initialise it and set `struct_size` to `sizeof(InkvecResult)`
 (`InkvecResult r = INKVEC_RESULT_INIT;`). After the call, release it with
 `inkvec_result_free`, whether the call succeeded or not.
 */
typedef struct InkvecResult {
  /*
   Set by the caller: `sizeof(InkvecResult)` as the caller compiled it.
   */
  uint32_t struct_size;
  /*
   `INKVEC_OK` or one of the `INKVEC_ERR_*` codes; the same value the call returned.
   */
  int32_t status;
  /*
   The SVG document, NUL-terminated UTF-8, owned by the library. NULL on error.
   */
  char *svg;
  /*
   Length of `svg` in bytes, not counting the terminating NUL. 0 on error.
   */
  size_t svg_len;
  /*
   Width of the input image in pixels (the SVG's `width` unless a margin grew it).
   */
  uint32_t width;
  /*
   Height of the input image in pixels.
   */
  uint32_t height;
  /*
   Why the call failed, NUL-terminated UTF-8, owned by the library. NULL on success.
   */
  char *error;
} InkvecResult;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/*
 Trace an encoded image (PNG, JPEG, WebP, GIF, BMP or TIFF) to SVG.

 `options_json` is a JSON object of options, NULL, or `""`; missing options take their
 defaults (`inkvec_default_options`). Returns the status also stored in `out->status`.

 # Safety

 `bytes` must point to `len` readable bytes. `options_json` must be NULL or a
 NUL-terminated string. `out` must point to a writable `InkvecResult` whose `struct_size`
 is set.
 */
int32_t inkvec_trace(const uint8_t *bytes,
                     size_t len,
                     const char *options_json,
                     struct InkvecResult *out);

/*
 Trace raw pixels to SVG: straight (not premultiplied) RGBA, 8 bits per channel,
 row-major, tightly packed. `len` must be exactly `width * height * 4`.

 The SVG is byte-identical to `inkvec_trace` on a PNG holding the same pixels.

 # Safety

 `rgba` must point to `len` readable bytes. `options_json` must be NULL or a
 NUL-terminated string. `out` must point to a writable `InkvecResult` whose `struct_size`
 is set.
 */
int32_t inkvec_trace_rgba(const uint8_t *rgba,
                          size_t len,
                          uint32_t width,
                          uint32_t height,
                          const char *options_json,
                          struct InkvecResult *out);

/*
 Release the strings a trace stored in `result` and reset them to NULL. Safe to call on
 NULL, on a result that holds no strings, and more than once.

 # Safety

 `result` must be NULL or point to an `InkvecResult` last filled by `inkvec_trace` or
 `inkvec_trace_rgba` (or zero-initialised), whose strings have not been freed any other way.
 */
void inkvec_result_free(struct InkvecResult *result);

/*
 The library version, e.g. `"0.1.3"`. Static; do not free.
 */
const char *inkvec_version(void);

/*
 The target this library was compiled for, e.g. `"x86_64-linux-gnu"`. Output is
 byte-identical between builds with the same target; another target can write the same
 drawing slightly differently. Static; do not free.
 */
const char *inkvec_build_target(void);

/*
 `INKVEC_ABI_VERSION` as this library was built, for a binding to check at load time.
 */
uint32_t inkvec_abi_version(void);

/*
 The JSON Schema (draft 2020-12) of the options object: every option's name, type,
 default, description and range. Static; do not free.
 */
const char *inkvec_options_schema(void);

/*
 Every option at its default, as a compact JSON object. Static; do not free.
 */
const char *inkvec_default_options(void);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* INKVEC_H */

/*
 * Header-only helper, not a library export: an InkvecResult ready for a call, every field
 * zero and struct_size set to the size this header gives the struct, so a newer library
 * never writes past it.
 *
 *   InkvecResult r = INKVEC_RESULT_INIT;     or     InkvecResult r = inkvec_result_init();
 *
 * Guarded separately because cbindgen places it after the include guard.
 */
#ifndef INKVEC_RESULT_INIT
static inline InkvecResult inkvec_result_init(void) {
  InkvecResult r;
  memset(&r, 0, sizeof r);
  r.struct_size = (uint32_t)sizeof r;
  return r;
}
#define INKVEC_RESULT_INIT inkvec_result_init()
#endif